--- a/requirements_and_design.txt
+++ b/requirements_and_design.txt
@@ -5,7 +5,7 @@ pymongo
 bcrypt
 
 =================================================
-db design
+db design  需要安装mongodb
 =================================================
 db_name: blog
 
